--- a/insure-landing-page-master/style.css
+++ b/insure-landing-page-master/style.css
@@ -99,11 +99,7 @@ right: 0;
 z-index: 1;
 
 }
-/* .man{
-position: absolute;
-right: 150px;
-top: 200px; 
-} */
+
 .imagelower{
 position: absolute;
 bottom: -300px;
@@ -236,6 +232,16 @@ font-family: monospace ;
 @media screen and (max-width:480px) and (min-width:299px){
 
 }
+
+@media only screen and (min-width: 1522px) {
+    .man{
+        position: absolute;
+        right: 150px;
+        top: 200px; 
+        }
+} 
+
+
 
 /* for tablets */
 @media screen and (max-width:1522px) and (min-width:1390px){
